<?xml version="1.0"?>
<package format="3">
  <name>test_control</name>
  <version>0.0.0</version>
  <description>Test control package with hinge joint</description>
  <maintainer email="wintunlatt@example.com">wintunlatt</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>setuptools</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
